# DotMatrixReadout

./: .gitignore  CMakeLists.txt  Makefile  README.md  start.sh
include/: matrixDrawable.h  matrixWidget.h
include/matrixWidgets/: matrixApp.h  matrixDateTimeClockWidget.h  matrixDrawable.h  matrixIconWidget.h  matrixTextWidget.h  matrixWidget.h
matrixLib/rpi-rgb-led-matrix/: .gitignore
matrixLib/rpi-rgb-led-matrix/examples-api-use/: .Makefile.swp
src/: CMakeLists.txt  main.cxx  matrixDrawable.cxx  matrixWidget.cxx
src/matrixWidgets/: CMakeLists.txt  matrixApp.cxx  matrixDateTimeClockWidget.cxx  matrixDrawable.cxx  matrixIconWidget.cxx  matrixTextWidget.cxx  matrixWidget.cxx
